@@ -1,1 +1,23 @@
+<h1>Tip Calculator</h1>
+
+<h3>Made By Shahnoza Dodikhudoeva</h3>
+
+<b>Download the JavaFX SDK:</b>
+https://gluonhq.com/products/javafx/
+
+
+
+<b>Add VM-options:</b>
+Run-> Edit Configuration -> modify options -> add vm options 
+--module-path %PATH_TO_JAVAFX_SDK/LIB% --add-modules javafx.controls,javafx.fxml
+
+<h2>Screenshots</h2>
+
+
+![Screenshot from 2021-05-10 16-09-27](https://user-images.githubusercontent.com/71721145/117647889-62358580-b1af-11eb-85df-ce3cda72ce88.png)
+
+
+
+![Screenshot from 2021-05-10 16-09-18](https://user-images.githubusercontent.com/71721145/117647894-65307600-b1af-11eb-82d5-c480f74a093b.png)
+
 
